# trendscout-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LOCAL_HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/trendcut_agent/: __init__.py  app.py  beatmatch.py  captioned_clips.py  cli.py  config.py  dedupe.py  google_auth.py  google_outputs.py  google_resources.py  llm.py  moment_selection.py  runner.py  sources.py  store.py  summary_video.py  transcript.py  transcript_intelligence.py
docs/: APIFY.md  DEMO_RECORDING_RUNBOOK.md  GOOGLE_OAUTH.md  HACKATHON_DEMO_SCRIPT.md  MVP_SPEC.md  NVIDIA_HACKATHON_ANGLE.md  SUBMISSION_PACKET.md  TRANSCRIPT_FIRST_ARCHITECTURE.md
samples/inbox/: ai_real_estate_tools_01.mp4.json  ai_real_estate_tools_02.mp4.json  ai_real_estate_tools_03.mp4.json  restaurant_food_trend_reject.mp4.json
scripts/: build_transcribed_stock_market_pack.py  demo_source_captioned_clips.py  demo_transcript_clips.py  demo_transcript_summary.py  generate_demo_assets.py  generate_summary_review_pack.py  public_audit.py  run_category_beatmatch_tests.py  smoke_run.py
static/: index.html
tests/: test_api.py  test_captioned_clips.py  test_core.py  test_summary_video.py
