[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trendscout-agent"
version = "0.1.0"
description = "Scheduled interest scanner that creates beat-matched videos from scraped source clips."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
trendscout = "trendcut_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["trendcut_agent*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
